# 2026SOT-CE-AI-Tox-EH

./: README.md
1st Presentation - Wei-Chun Chou/: SOT2026_CE_Course - Presentation 1.ipynb
2nd Presentation - Zhoumeng Lin/Case Study 1 Ke/: Ch4_example_code.ipynb
2nd Presentation - Zhoumeng Lin/Case Study 2 Nano/: AI_QSAR_KTRESreleas.ipynb  Data-Nano.csv
3rd Presentation - Srijit Seal/: Notes updated.docx  Notes.docx  Predicting Bioactivity with Cell Painting.py  lock.txt  pyproject.toml
4th Presentation - Qunshan Jia/: BOOK_GNN.ipynb  Book_Tree.ipynb  Notes.docx  dev_tox.xlsx  gnn_dev_training_data.xlsx
5th Presentation - Chi-Yun Chen/: Carcinogenicity_NN_SOT.ipynb  ReadMe_CY.txt  SMILES_cancer df.csv
