
[project]
dependencies = [

"marimo[recommended,lsp]==0.16.4",
"anthropic>=0.67.0",
"anywidget>=0.9.18",
"attrs>=25.3.0",
"beautifulsoup4>=4.13.4",
"bokeh>=3.7.3",
"chromadb>=1.0.0",
"cvxpy>=1.5.0",
"datasets>=4.0.0",
"geopandas>=1.0.0",
"google-genai>=1.37.0",
"huggingface-hub>=0.34.0",
"ipython>=9.0.0",
"ipywidgets>=8.0.0",
"jax>=0.6.2",
"Jinja2>=3.1.6",
"lancedb>=0.20.0",
"lxml>=5.4.0",
"MarkupSafe>=3.0.2",
"matplotlib>=3.8",
"multitasking>=0.0.12",
"nltk>=3.9.1",
"numpy>=2.0",
"openai>=1.107.3",
"opencv-python>=4.12.0.88",
"openpyxl>=3.1.5",
"pandas>=2.0",
"pillow>=11.0.0",
"plotly>=6.0.0",
"plotnine>=0.14.5",
"polars>=1.25",
"pyarrow>=18.1.0",
"pydantic>=2.11.7",
"pymde>=0.2.3",
"pyspark>=4.0.0",
"pytest>=8.4.1",
"PyYAML>=6.0.2",
"requests>=2.32.3",
"scikit-learn>=1.6.0",
"scipy>=1.16.1",
"seaborn>=0.13.2",
"sentence-transformers>=5.0.0",
"spacy>=3.7.5",
"sympy>=1.13.1",
"tensorflow-datasets>=4.9.9",
"tensorflow>=2.19.0",
"tf_keras>=2.19.0",
"tokenizers>=0.21.4",
"torch>=2.7.1",
"tqdm>=4.67.1",
"transformers>=4.48.0",
"umap-learn>=0.5.8",
"urllib3>=2.5.0",
"vega-datasets==0.9.0",
"wandb>=0.19",
"xarray>=2025.1.0",
"xgboost>=3.0.0",
"yfinance>=0.2.65",

]

name = "marimo-kernel"
# tensorflow not compatible with 3.13
requires-python = ">=3.12"
version = "0.1.0"

[tool.marimo.package_management]
manager = "uv"

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.marimo.runtime]
auto_instantiate = false

[tool.marimo.ai.open_ai_compatible]
api_key = "unused"
base_url = "https://ai.marimo.app/molab/v1"
